--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>URL 및 버튼 입력</title>
+    <title>URL 및 버튼 입력test</title>
   </head>
   <body>
     <h1>1. 먼저 로그인을 진행하고 닫아주세요.</h1>
